Update get site dto to reduce amount of data being sent
