# project-dam-backend/dist/swagger.json
@@ -129,6 +129,63 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"GetSitesRequest": {
+				"properties": {
+					"localName": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string"
+					},
+					"country": {
+						"type": "string"
+					},
+					"address": {
+						"properties": {
+							"longitude": {
+								"type": "number",
+								"format": "double"
+							},
+							"latitude": {
+								"type": "number",
+								"format": "double"
+							},
+							"zipCode": {
+								"type": "string"
+							},
+							"state": {
+								"type": "string"
+							},
+							"city": {
+								"type": "string"
+							},
+							"street": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"longitude",
+							"latitude",
+							"zipCode",
+							"state",
+							"city",
+							"street"
+						],
+						"type": "object"
+					},
+					"isActive": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"localName",
+					"type",
+					"country",
+					"address"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"IAddress": {
 				"properties": {
 					"street": {
@@ -1129,7 +1186,7 @@
 										},
 										"sites": {
 											"items": {
-												"$ref": "#/components/schemas/ISite"
+												"$ref": "#/components/schemas/GetSitesRequest"
 											},
 											"type": "array"
 										}
